[package]
name = "dyndns"
version = "0.1.0"
edition = "2021"

[dependencies]
aws-config = "1.8.2"
aws-sdk-dynamodb = "1.55.0"
aws-sdk-route53 = "1.86.0"
clap = { version = "4.5.41", features = ["derive"] }
env_logger = "0.11.8"
log = "0.4.27"
reqwest = { version = "0.12.22", features = ["json"] }
serde = { version = "1.0.219", features = ["derive"] }
tokio = { version = "1.46.1", features = ["full"] }
